Update 2주차-3. 저장소 생성과 커밋 이력 관리.md

--- a/2주차-3. 저장소 생성과 커밋 이력 관리.md
+++ b/2주차-3. 저장소 생성과 커밋 이력 관리.md
@@ -154,3 +154,92 @@ $ git status -s     # 깃 상태를 짧은 코드로 본다.
 A  hello     # A(staging area)에 있는 상태로 변했다.
 ```
 깃은 안정적인 commit을 할 수 있도록 add 명령어를 기준으로 이전(untracked, git이 파일을 추적하지 않는 상태)과 이후(staging area, git이 파일을 추적하는 상태) 단계를 구분한다. 
+<br/><br/>
+
+## commit 하기
+- commit: '~에 적어두다'를 의미, 깃 저장소(git repository)에 변경된 파일 차이를 기록하는 작업이다.
+```bash
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/02w/mid (main)
+$ git commit -m 'cerate hello'     # commit -m 명령어를 이용해 hello 파일 커밋 메시지를 작성한다.     
+[main (root-commit) b808cce] cerate hello
+ 1 file changed, 1 insertion(+)     # 커밋 성공
+ create mode 100644 hello
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/02w/mid (main)
+$ git status     # status 명령어로 현재 커밋해야 할 파일이 있는지 확인한다.
+On branch main 
+nothing to commit, working tree clean     # 커밋해야 할 파일은 없다. 이렇게 워킹 디렉토리가 깨끗하게 정리되어 있어야지 다음에 또 다른 커밋 명령어 수행이 가능하다.
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/02w/mid (main)
+$ git log     # log 명령어로 커밋 이력을 살펴본다.
+commit b808cceb32658a8a85dc5a8c9c060d14035f00fa (HEAD -> main)     # commit ID(40개의 16진수), (HEAD -> 브랜치명)
+Author: yubeenso <youbin0105@gamil.com>
+Date:   Sat Oct 15 10:02:01 2022 +0900
+
+    cerate hello     # 내가 앞서 작성한 커밋 메시지
+    
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/02w/mid (main)
+$ git log --oneline     # log --oneline 명령어로 커밋 이력을 한 줄로 확인할 수 있다.
+b808cce (HEAD -> main) cerate hello     # 커밋 ID의 앞부분 일부와 HEAD가 가리키는 branch, 커밋 메시지가 한 줄로 출력된다.
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/02w/mid (main)
+$ git show head     # HEAD 포인터가 가리키는 커밋 정보를 확인
+commit b808cceb32658a8a85dc5a8c9c060d14035f00fa (HEAD -> main)
+Author: yubeenso <youbin0105@gamil.com>
+Date:   Sat Oct 15 10:02:01 2022 +0900
+
+    cerate hello
+
+diff --git a/hello b/hello
+new file mode 100644
+index 0000000..f70f10e
+--- /dev/null
++++ b/hello
+@@ -0,0 +1 @@
++A
+```
+HEAD는 브랜치의 마지막 커밋을 가리키는 포인터를 의미한다. git log를 입력하면 최근의 커밋 이력부터 이전의 모든 커밋을 보여주나 아직까지는 커밋이 하나이므로 하나만 보여준다.
+
+- **git show**: 현재 브랜치의 가장 최근 커밋 정보를 확인
+- **git show 커밋 해시값**: 특정 커밋 정보를 확인
+<br/><br/>
+
+## 별칭 만들기
+```bash
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/02w/mid (main)
+$ git config --global alias.log1 'log --oneline'     # alias 명령어를 통해 'log --oneline' 명령어의 별칭을 log1으로 설정해 주었다.
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/02w/mid (main)
+$ git config alias.log1     # 'git config alias.별칭'을 입력함으로써 그 별칭이 무슨 명령어를 의미하는지를 조회할 수 있다.
+log --oneline
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/02w/mid (main)
+$ git log1     # log --oneline 대신에 log1을 입력하면 다음과 같이 커밋 이력이 한 줄로 나타난다.
+b808cce (HEAD -> main) cerate hello
+```
+<br/><br/>
+
+# 실습 4
+## 기존 파일에 내용 추가
+```bash
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/02w/mid (main)
+$ echo 'B' >> hello     # echo 명령어를 이용해 hello 파일에 'B'라는 내용을 추가한다.
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/02w/mid (main)
+$ cat hello     # cat 명령어를 이용해서 hello 파일 내의 내용을 확인한다.
+A
+B
+```
+- '>>'의 의미: 기존 파일에 추가한다는 의미, 파일이 있다면 마지막 줄에 내용이 추가된다.
+
+```bash
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/02w/mid (main)
+$ git status -s     # status로 상태를 확인한다.
+ M hello     # M은 커밋 이후에 파일 수정 시 상태 변화를 의미한다.
+
+
+
+
+
+
+
