Update 2주차-3. 저장소 생성과 커밋 이력 관리.md

--- a/2주차-3. 저장소 생성과 커밋 이력 관리.md
+++ b/2주차-3. 저장소 생성과 커밋 이력 관리.md
@@ -236,10 +236,20 @@ B
 뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/02w/mid (main)
 $ git status -s     # status로 상태를 확인한다.
  M hello     # M은 커밋 이후에 파일 수정 시 상태 변화를 의미한다.
+ 
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/02w/mid (main)
+$ git commit -am 'update to add B on hello'     # 옵션 -am을 이용하여 add와 commit(메시지 작성)을 한꺼번에 수행하였다.
+[main adb90ac] update to add B on hello
+1 file changed, 1 insertion(+)     # 성공적으로 파일이 수정되었다.
+```
+-am은 수정한 파일에만 사용 가능하다. 처음 만든 untracked 파일은 add한 후 commit(-m 사용)해야 한다.
+<br/><br/>
 
-
-
-
-
-
-
+```bash
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/02w/mid (main)
+$ git log1     # 앞서 만들어 놓은 별칭을 이용해 커밋 이력을 한 줄로 확인한다. HEAD가 새로 커밋한 부분에 위치해 있는 것을 볼 수 있다.
+adb90ac (HEAD -> main) update to add B on hello
+b808cce cerate hello
+```
+- HEAD 하나 전 이력: git show HEAD^ 또는 HEAD~ 또는 HEAD~1
+- HEAD 2개 전 이력: git show HEAD^^ 또는 HEAD~~ 또는 HEAD~2
