--- a/3주차-2. commit & log, clone & pull.md
+++ b/3주차-2. commit & log, clone & pull.md
@@ -141,4 +141,62 @@ Date:   Sun Oct 16 20:38:19 2022 +0900
 <br/><br/>
 
 # 실습 5
-## github 원격 저장소 
+## github 원격 저장소 복제와 수정내용 가져오기(clone, pull)
+```
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/03w
+$ git clone https://github.com/ai7dnn/OSS-lect     # clone 명령어 옆에 복사할 저장소 주소를 입력하여 그 저장소와 동일한 폴더인 OSS-lect를 생성하여 복제하였다.
+Cloning into 'OSS-lect'...
+remote: Enumerating objects: 2039, done.
+remote: Counting objects: 100% (192/192), done.
+remote: Compressing objects: 100% (126/126), done.
+remote: Total 2039 (delta 86), reused 142 (delta 62), pack-reused 1847
+Receiving objects: 100% (2039/2039), 38.51 MiB | 5.22 MiB/s, done.
+Resolving deltas: 100% (932/932), done.
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/03w
+$ git clone https://github.com/ai7dnn/OSS-lect .     # clone 명령어를 사용하였고 URL 뒤에 .을 추가하여 현재 폴더인 03w에 저장소에 있는 파일들을 그대로 복제하였다.
+Cloning into '.'...                                  # OSS-lect 폴더가 생성되지 않고 그 안의 파일들만 그대로 03w 폴더에 복제됨.
+remote: Enumerating objects: 2039, done.
+remote: Counting objects: 100% (192/192), done.
+remote: Compressing objects: 100% (126/126), done.
+remote: Total 2039 (delta 86), reused 142 (delta 62), pack-reused 1847
+Receiving objects: 100% (2039/2039), 38.51 MiB | 5.74 MiB/s, done.
+Resolving deltas: 100% (932/932), done.
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/03w (main)
+$ git clone https://github.com/ai7dnn/OSS-lect A     # clone 명령어를 사용하였고 URL 뒤에 A를 추가하여 A라는 폴더 안에 복제된 파일들이 담기게 하였다. 
+Cloning into 'A'...                                  # 위에 OSS-lect 폴더에서 이름만 A로 바뀐 것
+remote: Enumerating objects: 2039, done.
+remote: Counting objects: 100% (192/192), done.
+remote: Compressing objects: 100% (126/126), done.
+remote: Total 2039 (delta 86), reused 142 (delta 62), pack-reused 1847
+Receiving objects: 100% (2039/2039), 38.51 MiB | 6.26 MiB/s, done.
+Resolving deltas: 100% (930/930), done.
+```
+- git clone 주소_URL : 동일 폴더 생성해 복제
+- git clone 주소_URL : 현재 폴더에 복제
+- git clone 주소_URL dname : dname이라는 이름의 폴더를 생성해 복제
+<br/><br/>
+
+```
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/03w
+$ cd oss-lect     # 복제된 oss-lect로 폴더 이동
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/03w/oss-lect (main)
+$ git remote     # 원격 저장소 별칭 이름 조회
+origin     # 별칭 이름이 origin임을 확인 가능
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/03w/oss-lect (main)
+$ git remote -v     # 원격 저장소 별칭 이름 세부 조회
+origin  https://github.com/ai7dnn/OSS-lect (fetch)
+origin  https://github.com/ai7dnn/OSS-lect (push)
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/03w/oss-lect (main)
+$ git pull     # 수정된 내용 다시 가져오기
+Already up to date.     # 서버 원격 저장소 복제 후 변화한 내용이 없으면 옆과 같이 Already up to date라고 뜬다.
+```
+<br/><br/>
+
+# 실습 6
+## 저장소 repo-test 생성 후 지역저장소와 연동하기
+자신의 github에서 repo-test라는 저장소를 생성 후 token을 이용해 sign in 하여 지역저장소와 연동시킨다.
