Update 4주차. 저장소 생성과 지역과 원격저장소 연동.md

--- a/4주차. 저장소 생성과 지역과 원격저장소 연동.md
+++ b/4주차. 저장소 생성과 지역과 원격저장소 연동.md
@@ -1,2 +1,63 @@
 # 실습 1
 우선 다음 저장소를 나의 깃허브에 fork한다.
+--> https://github.com/ai7dnn/OSS-lect.git
+--> https://github.com/ai7dnn/mine.git
+
+위 저장소들을 내 PC에 clone한다.
+```
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w
+$ git clone https://github.com/ai7dnn/OSS-lect.git     # clone 명령어 이용, 1번째 저장소 clone하기
+Cloning into 'OSS-lect'...
+remote: Enumerating objects: 2039, done.
+remote: Counting objects: 100% (192/192), done.
+remote: Compressing objects: 100% (126/126), done.
+remote: Total 2039 (delta 86), reused 142 (delta 62), pack-reused 1847
+Receiving objects: 100% (2039/2039), 38.51 MiB | 3.90 MiB/s, done.
+Resolving deltas: 100% (932/932), done.
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w
+$ git clone https://github.com/ai7dnn/mine.git     # clone 명령어 이용, 2번째 저장소 clone하기
+Cloning into 'mine'...
+remote: Enumerating objects: 87, done.
+remote: Counting objects: 100% (87/87), done.
+remote: Compressing objects: 100% (81/81), done.
+remote: Total 87 (delta 5), reused 77 (delta 4), pack-reused 0
+Receiving objects: 100% (87/87), 12.74 KiB | 1003.00 KiB/s, done.
+Resolving deltas: 100% (5/5), done.
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w
+$ git remote     # remote(원격 저장소와 관련된 명령어) 명령어는 저장소에서 사용할 수 있는 명령어이기 때문에 저장소가 아닌 04w에서 사용하면 에러가 발생한다.
+fatal: not a git repository (or any of the parent directories): .git
+```
+<br/><br/>
+
+# 실습 2
+## 자신의 깃허브에서 저장소 2개 생성
+우선, 나의 깃허브에서 저장소 myrepo를 생성하고 README.md와 그의 discription도 생성한다.
+
+그리고 나의 깃허브에서 저장소 name을 생성한 후 다음 주소에 있는 내용(readme 내용)을 복사해 저장한다.
+--> https://github.com/ai7dnn/name.git
+
+```
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w
+$ echo "#name" >> README.md
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w
+$ git init
+Initialized empty Git repository in C:/OSS/git/04w/.git/
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w (main)
+$ git add README.md
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w (main)
+$ git commit -m "first commit"
+[main (root-commit) 2a6ee0b] first commit
+ 1 file changed, 1 insertion(+)
+ create mode 100644 README.md
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w (main)
+$ git branch -M main
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w (main)
+$ git remote add origin https://github.com/kanujoa/name.git
+
