Update 4주차. 저장소 생성과 지역과 원격저장소 연동.md

--- a/4주차. 저장소 생성과 지역과 원격저장소 연동.md
+++ b/4주차. 저장소 생성과 지역과 원격저장소 연동.md
@@ -1,63 +1,228 @@
 # 실습 1
-우선 다음 저장소를 나의 깃허브에 fork한다.
---> https://github.com/ai7dnn/OSS-lect.git
+우선 다음 저장소를 나의 깃허브에 fork한다.  
+--> https://github.com/ai7dnn/OSS-lect.git  
 --> https://github.com/ai7dnn/mine.git
 
 위 저장소들을 내 PC에 clone한다.
 ```
 뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w
-$ git clone https://github.com/ai7dnn/OSS-lect.git     # clone 명령어 이용, 1번째 저장소 clone하기
+$ git clone https://github.com/ai7dnn/OSS-lect.git     # 첫번째 주소에 해당하는 저장소 clone
 Cloning into 'OSS-lect'...
 remote: Enumerating objects: 2039, done.
 remote: Counting objects: 100% (192/192), done.
-remote: Compressing objects: 100% (126/126), done.
-remote: Total 2039 (delta 86), reused 142 (delta 62), pack-reused 1847
-Receiving objects: 100% (2039/2039), 38.51 MiB | 3.90 MiB/s, done.
-Resolving deltas: 100% (932/932), done.
+remote: Compressing objects: 100% (121/121), done.
+remote: Total 2039 (delta 86), reused 162 (delta 67), pack-reused 1847
+Receiving objects: 100% (2039/2039), 38.51 MiB | 5.80 MiB/s, done.
+Resolving deltas: 100% (930/930), done.
 
 뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w
-$ git clone https://github.com/ai7dnn/mine.git     # clone 명령어 이용, 2번째 저장소 clone하기
+$ git clone https://github.com/ai7dnn/mine.git     # 두번째 주소에 해당하는 저장소 clone
 Cloning into 'mine'...
 remote: Enumerating objects: 87, done.
 remote: Counting objects: 100% (87/87), done.
 remote: Compressing objects: 100% (81/81), done.
 remote: Total 87 (delta 5), reused 77 (delta 4), pack-reused 0
-Receiving objects: 100% (87/87), 12.74 KiB | 1003.00 KiB/s, done.
+Receiving objects: 100% (87/87), 12.74 KiB | 1.06 MiB/s, done.
 Resolving deltas: 100% (5/5), done.
+```
+<br/>
+
+그러고 나서 나의 깃허브에 저장소 myrepo를 README.md와 description과 함께 생성한다. 또, name을 생성하는데 여기에는 README와 discription 모두 작성하지 않는다. 
+<br/><br/>
+
+# 실습 3
+## 원격저장소 myrepo를 복제(clone)한 후 지역저장소 커밋을 myrepo에 반영
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w
+```
+$ git clone https://github.com/kanujoa/myrepo.git     # 아까 만든 내 myrepo 저장소의 주소 복사해 clone 명령어와 함께 작성 --> 로컬로 복제
+Cloning into 'myrepo'...
+remote: Enumerating objects: 6, done.
+remote: Counting objects: 100% (6/6), done.
+remote: Compressing objects: 100% (3/3), done.
+remote: Total 6 (delta 0), reused 0 (delta 0), pack-reused 0
+Receiving objects: 100% (6/6), done.
 
 뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w
-$ git remote     # remote(원격 저장소와 관련된 명령어) 명령어는 저장소에서 사용할 수 있는 명령어이기 때문에 저장소가 아닌 04w에서 사용하면 에러가 발생한다.
-fatal: not a git repository (or any of the parent directories): .git
+$ cd myrepo     # myrepo 폴더(저장소)로 위치 변경
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/myrepo (main)
+$ git remote     # 원격 서버(저장소)의 별칭을 보여줌.
+origin     # 원격 서버의 별칭은 origin임.
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/myrepo (main)
+$ git remote -v     # 원격 저장소의 목록들을 보여줌.
+origin  https://github.com/kanujoa/myrepo.git (fetch)     # 원격 저장소의 별칭은 origin, 원격 저장소는 현재 myrepo인 것을 알 수 있음.
+origin  https://github.com/kanujoa/myrepo.git (push)
+```
+<br/>
+
+앞서 clone해온 mine 저장소 폴더 하부에 있는 6장 폴더를 복사하여 myrepo 저장소 폴더 하부에 붙여넣기 한다.
+```
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/myrepo (main)
+$ git status     # status 명령어로 깃 상태 확인
+On branch main
+Your branch is up to date with 'origin/main'.
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        "6\354\236\245/"     # myrepo에 폴더를 복붙해서 추가시켰는데 아직 staging area에 올라가지 않았으므로 untracked files라고 뜬다.
+
+nothing added to commit but untracked files present (use "git add" to track)
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/myrepo (main)
+$ git add .     # git add . 을 하면 폴더 하부의 모든 파일이 add된다. 파일이 많을 때 쓰면 좋다.
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/myrepo (main)
+$ git commit -m "create ch06 folder"     # 커밋 메시지 작성
+[main 55e5132] create ch06 folder
+ 42 files changed, 270 insertions(+)     # 6장 폴더 하부에 있는 많은 파일들이 모두 commit되었다.
+ create mode 100644 "6\354\236\245/ex06-01.py"
+ create mode 100644 "6\354\236\245/ex06-02.py"
+ create mode 100644 "6\354\236\245/ex06-03.py"
+ create mode 100644 "6\354\236\245/ex06-04.py"
+ create mode 100644 "6\354\236\245/ex06-05.py"
+ .....
+ ```
+ <br/>
+ 
+ ctrl + L : clear 명령의 단축키이다.
+ <br/><br/>
+ 
+ 지금 상태에서 myrepo의 로컬 상태를 살펴보면 다음과 같다.
+ ```
+ 뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/myrepo (main)
+$ ls
+6장/  README.md     # 6장 폴더와 README.md 파일 이렇게 2개가 존재한다.
+```
+<br/>
+
+하지만 github에서 myrepo에 들어가 보면 README.md 파일 하나밖에 없는 것을 볼 수 있다. 지역 저장소 안의 파일 개수가 원격 저장소 안의 파일 개수보다 더 많은 것이다.  
+지역 저장소에 있는 데이터를 서버로 올려야 한다. --> **"push"** 이용
+```
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/myrepo (main)     # 현재 로컬 저장소가 myrepo인 것을 확인
+$ git push https://github.com/kanujoa/myrepo.git     # push 명령어 뒤에 서버의 주소(myrepo 주소)를 적어주면 그곳에 로컬 저장소의 데이터가 올라간다.
+Enumerating objects: 46, done.
+Counting objects: 100% (46/46), done.
+Delta compression using up to 4 threads
+Compressing objects: 100% (44/44), done.
+Writing objects: 100% (45/45), 5.95 KiB | 156.00 KiB/s, done.
+Total 45 (delta 2), reused 0 (delta 0), pack-reused 0
+remote: Resolving deltas: 100% (2/2), done.
+To https://github.com/kanujoa/myrepo.git
+   0661d76..55e5132  main -> main     # github에서 새로고침하면 6장이 제대로 올라가 있는 것을 볼 수 있다.
+```
+<br/>
+
+github 로그인이 되어 있는 상태면 토큰을 적어주지 않아도 위처럼 자동으로 push된다.  
+만약 로그인이 되어 있지 않은 상태라면 다음과 같이 적어줄 수 있다.
+```
+git push https://토큰(암호)@github.com/kanujoa/myrepo.git
 ```
 <br/><br/>
 
-# 실습 2
-## 자신의 깃허브에서 저장소 2개 생성
-우선, 나의 깃허브에서 저장소 myrepo를 생성하고 README.md와 그의 discription도 생성한다.
-
-그리고 나의 깃허브에서 저장소 name을 생성한 후 다음 주소에 있는 내용(readme 내용)을 복사해 저장한다.
---> https://github.com/ai7dnn/name.git
-
+# 실습 4
+## 지역저장소 생성 후 원격저장소 name과 연결해 지역저장소 commit을 name에 반영(push)
 ```
 뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w
-$ echo "#name" >> README.md
+$ git init name     # 로컬 저장소 name 생성(원격 저장소 name은 앞에서 만들어 놓음)
+Initialized empty Git repository in C:/OSS/git/04w/name/.git/
 
 뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w
-$ git init
-Initialized empty Git repository in C:/OSS/git/04w/.git/
+$ cd name     # name 저장소로 이동
 
-뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w (main)
-$ git add README.md
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/name (main)
+$ git remote     # 아직 연결된 원격 서버 주소가 없으므로 remote를 해도 아무 결과도 나오지 않음. 
 
-뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w (main)
-$ git commit -m "first commit"
-[main (root-commit) 2a6ee0b] first commit
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/name (main)
+$ git remote add origin https://github.com/kanujoa/name.git     # 원격 저장소의 주소를 기입하였고 별칭은 origin을 하였다. 로컬 저장소 name과 서버 name이 연결이 되었다.
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/name (main)
+$ git remote -v
+origin  https://github.com/kanujoa/name.git (fetch)     # 원격 저장소의 주소와 별칭 확인 가능
+origin  https://github.com/kanujoa/name.git (push)
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/name (main)
+$ git remote add nameorg https://github.com/kanujoa/name.git     # 별칭을 더 만들 수도 있다. origin 자리에 nameorg을 작성해 주었다.
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/name (main)
+$ git remote -v     # branch가 2개 생성된 것을 볼 수 있다.
+nameorg https://github.com/kanujoa/name.git (fetch)
+nameorg https://github.com/kanujoa/name.git (push)
+origin  https://github.com/kanujoa/name.git (fetch)
+origin  https://github.com/kanujoa/name.git (push)
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/name (main)
+$ echo "##저장소 name" > README.md     # name 저장소에 README.md 파일 생성, 내용은 "##저장소 name"
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/name (main)
+$ ls     # README.md 파일 만들어진 것을 확인
+README.md
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/name (main)
+$ git add README.md     # README.md를 stage 올리기
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/name (main)
+$ git commit -m "create README.md file"     # 커밋 메시지 작성
+[main (root-commit) 71c8e43] create README.md file
  1 file changed, 1 insertion(+)
  create mode 100644 README.md
+ 
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/name (main)
+$ git log     # 커밋 이력 확인
+commit 71c8e43844599923c8b54d46fb0923f5135afe3d (HEAD -> main)
+Author: yubeenso <youbin0105@gmail.com>
+Date:   Wed Oct 19 00:09:19 2022 +0900
 
-뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w (main)
-$ git branch -M main
+    create README.md file
 
-뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w (main)
-$ git remote add origin https://github.com/kanujoa/name.git
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/name (main)
+$ git push -u origin main     # 로컬 저장소 name의 내용을 원격 저장소 name으로 push하는 코드
+Enumerating objects: 3, done.
+Counting objects: 100% (3/3), done.
+Writing objects: 100% (3/3), 238 bytes | 79.00 KiB/s, done.
+Total 3 (delta 0), reused 0 (delta 0), pack-reused 0
+To https://github.com/kanujoa/name.git
+ * [new branch]      main -> main
+branch 'main' set up to track 'origin/main'.
+```
+<br/>
 
+github에서 name 저장소를 새로고침하면 README.md 파일이 생성되어 있는 것을 확인할 수 있다.
+<br/><br/>
+
+# 실습 5
+## 원격저장소 name 깃허브에서 직접 수정 후 지역저장소로 끌어오기(pull)
+```
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/name (main)
+$ pwd     # 지역 저장소가 name인 것을 확인
+/c/OSS/git/04w/name
+```
+<br/>
+
+github에서 원격저장소의 README.md 파일을 다음과 같이 수정한 후 commit changes를 누른다.
+```
+## 저장소 name
+- 저장소 생성
+```
+<br/>
+
+지역 저장소 name과 원격 저장소 name은 앞에서 연결해 놓았다. 따라서 'git pull' 명령만 입력해 주면 알아서 서버에서 로컬 저장소로 바뀐 내용을 끌어온다.
+```
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/name (main)
+$ git pull     # 원격 저장소에서 로컬 저장소로 끌어오기
+remote: Enumerating objects: 5, done.
+remote: Counting objects: 100% (5/5), done.
+remote: Total 3 (delta 0), reused 0 (delta 0), pack-reused 0
+Unpacking objects: 100% (3/3), 651 bytes | 15.00 KiB/s, done.
+From https://github.com/kanujoa/name
+   71c8e43..47ebbda  main       -> origin/main
+Updating 71c8e43..47ebbda
+Fast-forward
+ README.md | 3 ++-
+ 1 file changed, 2 insertions(+), 1 deletion(-)     # 하나의 파일(README.md)이 바뀌었는데 2줄이 추가되었고 1줄이 삭제되었음을 확인 가능
+ 
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w/name (main)
+$ cat README.md     # README.md의 내용 확인
+## 저장소 name    
+- 저장소 생성     # 수정된 내용이 반영된 것을 볼 수 있다.
+```
