Update 6주차-2. branch & switch, checkout : 브랜치 생성과 이동.md

--- a/6주차-2. branch & switch, checkout : 브랜치 생성과 이동.md
+++ b/6주차-2. branch & switch, checkout : 브랜치 생성과 이동.md
@@ -165,3 +165,15 @@ Switched to branch 'main'
 ![image](https://user-images.githubusercontent.com/99963066/197247535-68f3a09a-8b1a-4311-b5a6-e7aed4a6b5fe.png)
 
 ![image](https://user-images.githubusercontent.com/99963066/197247648-a486e93d-45f0-4b81-8db1-b6c2b06c9267.png)
+<br/><br/>
+
+## 참고
+```bash
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/06w/brp (main)
+$ git switch -c feat/edit HEAD^
+Switched to a new branch 'feat/edit'
+
+뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/06w/brp (feat/edit)     # 바뀐 브랜치 확인
+$ 
+```
+git switch -c branch_name 처럼 작성하게 되면 branch_name이라는 branch가 새로 만들어지면서 그 브랜치로 이동하게 된다. (branch와 checkout 명령을 같이 실행)
