Update 6주차-2. branch & switch, checkout : 브랜치 생성과 이동.md

--- a/6주차-2. branch & switch, checkout : 브랜치 생성과 이동.md
+++ b/6주차-2. branch & switch, checkout : 브랜치 생성과 이동.md
@@ -177,3 +177,4 @@ Switched to a new branch 'feat/edit'
 $ 
 ```
 git switch -c branch_name 처럼 작성하게 되면 branch_name이라는 branch가 새로 만들어지면서 그 브랜치로 이동하게 된다. (branch와 checkout 명령을 같이 실행)
+위에서는 HEAD^를 적어주었으므로 main 브랜치에서의 가장 최근 커밋 기준 바로 전 커밋에서부터 feat/edit 브랜치가 위치하게 된다.
