Update 3주차-2. commit & log, clone & pull.md

--- a/3주차-2. commit & log, clone & pull.md
+++ b/3주차-2. commit & log, clone & pull.md
@@ -174,7 +174,7 @@ Receiving objects: 100% (2039/2039), 38.51 MiB | 6.26 MiB/s, done.
 Resolving deltas: 100% (930/930), done.
 ```
 - git clone 주소_URL : 동일 폴더 생성해 복제
-- git clone 주소_URL : 현재 폴더에 복제
+- git clone 주소_URL . : 현재 폴더에 복제
 - git clone 주소_URL dname : dname이라는 이름의 폴더를 생성해 복제
 <br/><br/>
 
