--- a/4주차. 저장소 생성과 지역과 원격저장소 연동.md
+++ b/4주차. 저장소 생성과 지역과 원격저장소 연동.md
@@ -4,7 +4,7 @@
 --> https://github.com/ai7dnn/mine.git
 
 위 저장소들을 내 PC에 clone한다.
-```
+```bash
 뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/04w
 $ git clone https://github.com/ai7dnn/OSS-lect.git     # 첫번째 주소에 해당하는 저장소 clone
 Cloning into 'OSS-lect'...
