--- a/7주차. git diff: 스테이징 영역과 작업 공간, 커밋 이력의 파일 비교.md
+++ b/7주차. git diff: 스테이징 영역과 작업 공간, 커밋 이력의 파일 비교.md
@@ -327,7 +327,7 @@ index da5bf37..ad457fd 100644
 \ No newline at end of file
 
 뚜비@DESKTOP-SKBKL14 MINGW64 /c/OSS/git/07w/gdiff (main)
-$ git diff head~     # SA 기준으로 WD에서의 dtype.py가 어떻게 다른지를 비교할 수 있다.
+$ git diff head~     # GR 기준으로 WD에서의 dtype.py가 어떻게 다른지를 비교할 수 있다.
 diff --git a/dtype.py b/dtype.py
 index da5bf37..a496c0c 100644
 --- a/dtype.py
@@ -340,7 +340,7 @@ index da5bf37..a496c0c 100644
 \ No newline at end of file
 ```
 - 커밋 간의 파일 비교 : git diff 커밋아이디1 커밋아이디2
-- 이전 커밋과 푀종 커밋의 파일 비교 : git diff HEAD^ HEAD
+- 이전 커밋과 최종 커밋의 파일 비교 : git diff HEAD^ HEAD
 <br/><br/>
 
 # 실습 5
